# Pro2ProAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_BRAIN.md  README.md  docker-compose.dev.yml  docker-compose.yml  implementation-notes.md  promptfooconfig.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  promptfoo.yml
deploy/: README.md
deploy/k8s/: api.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  web.yaml
docs/adr/: 0001-repo-structure-and-frontend-stack.md  0002-email-hitl.md  0003-above-fold-css-animation.md  0004-venture-pipeline.md  0005-llm-call-resilience-and-groq-model-choice.md  0006-build-squad-subgraph.md  0007-containerization-and-deployment.md  0008-cicd-and-promptfoo.md  0009-cost-tracking.md  0010-closed-loop-public-search-and-publishing.md  0011-research-tool-transport-and-run-liveness.md
src/p2pops/: build_cli.py  chat_model.py  config.py  cost_tracking.py  graph.py  guardrails.py  llm.py  main.py  memory.py  models.py  notify.py  pipeline.py  pricing.py  publish.py  resilience.py  runner.py  store.py  telemetry.py
src/p2pops/agents/: analyst.py  research.py
src/p2pops/api/: app.py  schemas.py
src/p2pops/db/: engine.py  models.py  repository.py
src/p2pops/evals/: analyst_eval.py  promptfoo_provider.py
src/p2pops/mcp/: server.py
src/p2pops/tools/: hn.py  web.py  websearch.py
src/p2pops/venture/: agents.py  graph.py  principles.py  schemas.py  scoring.py
tests/: conftest.py  test_api.py  test_build.py  test_config.py  test_evals.py  test_guardrails.py  test_hn_tool.py  test_loop_features.py  test_mcp_server.py  test_memory.py  test_notify.py  test_pricing.py  test_repository.py  test_research_transport.py  test_resilience.py  test_scoring.py  test_store.py  test_venture.py
web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/console/reviews/: route.ts
web/src/app/api/console/reviews/[token]/: route.ts
web/src/app/api/console/runs/[id]/stream/: route.ts
web/src/app/api/search/: route.ts
web/src/app/api/search/runs/[id]/: route.ts
web/src/app/console/: page.tsx
web/src/app/console/opportunities/[id]/: page.tsx
web/src/app/console/runs/[id]/: page.tsx
web/src/app/showcase/[ptp]/: page.tsx
web/src/components/: approval-queue.tsx  footer.tsx  hero.tsx  live-timeline.tsx  method.tsx  nav.tsx  pipeline-stats.tsx  reveal.tsx  search.tsx  showcase.tsx
web/src/lib/: api.ts  cases.ts  seed-story.ts
