[project]
name = "p2pops"
version = "0.1.0"
description = "P2POps -- a multi-agent AI operations platform (Problem to Product)"
readme = "README.md"
authors = [
    { name = "dilipna", email = "dgn33345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "litellm>=1.91.0",
    "logfire>=4.37.0",
    "mcp>=1.28.1",
    "nemoguardrails>=0.23.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
p2pops = "p2pops:main"
p2pops-research = "p2pops.agents.research:main"
p2pops-mcp-server = "p2pops.mcp.server:main"
p2pops-pipeline = "p2pops.pipeline:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
